tests/baselines/reference/decoratorOnClassConstructorParameter4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassConstructorParameter4.ts(4,24): error TS1005: ',' expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassConstructorParameter4.ts (1 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, parameterIndex: number): void;
    
    class C {
        constructor(public @dec p: number) {}
                           ~
!!! error TS1005: ',' expected.
    }